forth/test/fail/test_call_extra_dot_local.af
\ Must fail to compile.
fun: .test_call_extra_dot_local { -- err }
  1 { val }
  .val
  nil
end
